fix: don't overflow when too little screenspace

--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -127,6 +127,7 @@ input[type="text"] {
     flex: 1;
 
     height: 85vh;
+    overflow: auto;
 }
 
 #scratch-pad {
